worked on assessment service || course service || user management service || auth service